lib/monkey/grammar/MonkeyParser.py
# Generated from Monkey.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MonkeyParser ( Parser ):

    grammarFileName = "Monkey.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Monkey '", "':'", "'  Operation: new = old '", 
                     "'* old'", "'* '", "'+ old'", "'+ '", "'  Test: divisible by '", 
                     "'    If true: throw to monkey '", "'    If false: throw to monkey '", 
                     "'  Starting items: '", "', '", "<INVALID>", "'\\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ITEMS_PREFIX", 
                      "COMMA", "INT", "NL", "LINE" ]

    RULE_monkeys = 0
    RULE_monkey = 1
    RULE_identifier = 2
    RULE_number = 3
    RULE_items = 4
    RULE_itemlist = 5
    RULE_operation = 6
    RULE_expr = 7
    RULE_mul_old_expr = 8
    RULE_mul_num_expr = 9
    RULE_sum_old_expr = 10
    RULE_sum_num_expr = 11
    RULE_test = 12
    RULE_iftrue = 13
    RULE_iffalse = 14

    ruleNames =  [ "monkeys", "monkey", "identifier", "number", "items", 
                   "itemlist", "operation", "expr", "mul_old_expr", "mul_num_expr", 
                   "sum_old_expr", "sum_num_expr", "test", "iftrue", "iffalse" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    ITEMS_PREFIX=11
    COMMA=12
    INT=13
    NL=14
    LINE=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MonkeysContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def monkey(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MonkeyParser.MonkeyContext)
            else:
                return self.getTypedRuleContext(MonkeyParser.MonkeyContext,i)


        def EOF(self):
            return self.getToken(MonkeyParser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(MonkeyParser.NL)
            else:
                return self.getToken(MonkeyParser.NL, i)

        def getRuleIndex(self):
            return MonkeyParser.RULE_monkeys

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMonkeys" ):
                listener.enterMonkeys(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMonkeys" ):
                listener.exitMonkeys(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMonkeys" ):
                return visitor.visitMonkeys(self)
            else:
                return visitor.visitChildren(self)




    def monkeys(self):

        localctx = MonkeyParser.MonkeysContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_monkeys)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 30
                self.monkey()
                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==14:
                    self.state = 31
                    self.match(MonkeyParser.NL)


                self.state = 36 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

            self.state = 39
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 38
                self.match(MonkeyParser.EOF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MonkeyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(MonkeyParser.IdentifierContext,0)


        def items(self):
            return self.getTypedRuleContext(MonkeyParser.ItemsContext,0)


        def operation(self):
            return self.getTypedRuleContext(MonkeyParser.OperationContext,0)


        def test(self):
            return self.getTypedRuleContext(MonkeyParser.TestContext,0)


        def iftrue(self):
            return self.getTypedRuleContext(MonkeyParser.IftrueContext,0)


        def iffalse(self):
            return self.getTypedRuleContext(MonkeyParser.IffalseContext,0)


        def getRuleIndex(self):
            return MonkeyParser.RULE_monkey

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMonkey" ):
                listener.enterMonkey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMonkey" ):
                listener.exitMonkey(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMonkey" ):
                return visitor.visitMonkey(self)
            else:
                return visitor.visitChildren(self)




    def monkey(self):

        localctx = MonkeyParser.MonkeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_monkey)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.identifier()
            self.state = 42
            self.items()
            self.state = 43
            self.operation()
            self.state = 44
            self.test()
            self.state = 45
            self.iftrue()
            self.state = 46
            self.iffalse()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(MonkeyParser.NumberContext,0)


        def NL(self):
            return self.getToken(MonkeyParser.NL, 0)

        def getRuleIndex(self):
            return MonkeyParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = MonkeyParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(MonkeyParser.T__0)
            self.state = 49
            self.number()
            self.state = 50
            self.match(MonkeyParser.T__1)
            self.state = 51
            self.match(MonkeyParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MonkeyParser.INT, 0)

        def getRuleIndex(self):
            return MonkeyParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):

        localctx = MonkeyParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_number)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(MonkeyParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ITEMS_PREFIX(self):
            return self.getToken(MonkeyParser.ITEMS_PREFIX, 0)

        def itemlist(self):
            return self.getTypedRuleContext(MonkeyParser.ItemlistContext,0)


        def NL(self):
            return self.getToken(MonkeyParser.NL, 0)

        def getRuleIndex(self):
            return MonkeyParser.RULE_items

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItems" ):
                listener.enterItems(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItems" ):
                listener.exitItems(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItems" ):
                return visitor.visitItems(self)
            else:
                return visitor.visitChildren(self)




    def items(self):

        localctx = MonkeyParser.ItemsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_items)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(MonkeyParser.ITEMS_PREFIX)
            self.state = 56
            self.itemlist()
            self.state = 57
            self.match(MonkeyParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MonkeyParser.NumberContext)
            else:
                return self.getTypedRuleContext(MonkeyParser.NumberContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MonkeyParser.COMMA)
            else:
                return self.getToken(MonkeyParser.COMMA, i)

        def getRuleIndex(self):
            return MonkeyParser.RULE_itemlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItemlist" ):
                listener.enterItemlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItemlist" ):
                listener.exitItemlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItemlist" ):
                return visitor.visitItemlist(self)
            else:
                return visitor.visitChildren(self)




    def itemlist(self):

        localctx = MonkeyParser.ItemlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_itemlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 59
                self.number()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==12:
                    self.state = 60
                    self.match(MonkeyParser.COMMA)


                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==13):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MonkeyParser.ExprContext,0)


        def NL(self):
            return self.getToken(MonkeyParser.NL, 0)

        def getRuleIndex(self):
            return MonkeyParser.RULE_operation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperation" ):
                listener.enterOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperation" ):
                listener.exitOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperation" ):
                return visitor.visitOperation(self)
            else:
                return visitor.visitChildren(self)




    def operation(self):

        localctx = MonkeyParser.OperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_operation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(MonkeyParser.T__2)
            self.state = 68
            self.expr()
            self.state = 69
            self.match(MonkeyParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mul_old_expr(self):
            return self.getTypedRuleContext(MonkeyParser.Mul_old_exprContext,0)


        def mul_num_expr(self):
            return self.getTypedRuleContext(MonkeyParser.Mul_num_exprContext,0)


        def sum_old_expr(self):
            return self.getTypedRuleContext(MonkeyParser.Sum_old_exprContext,0)


        def sum_num_expr(self):
            return self.getTypedRuleContext(MonkeyParser.Sum_num_exprContext,0)


        def getRuleIndex(self):
            return MonkeyParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = MonkeyParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expr)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.mul_old_expr()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.mul_num_expr()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.sum_old_expr()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 74
                self.sum_num_expr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mul_old_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MonkeyParser.RULE_mul_old_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMul_old_expr" ):
                listener.enterMul_old_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMul_old_expr" ):
                listener.exitMul_old_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMul_old_expr" ):
                return visitor.visitMul_old_expr(self)
            else:
                return visitor.visitChildren(self)




    def mul_old_expr(self):

        localctx = MonkeyParser.Mul_old_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_mul_old_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(MonkeyParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mul_num_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(MonkeyParser.NumberContext,0)


        def getRuleIndex(self):
            return MonkeyParser.RULE_mul_num_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMul_num_expr" ):
                listener.enterMul_num_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMul_num_expr" ):
                listener.exitMul_num_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMul_num_expr" ):
                return visitor.visitMul_num_expr(self)
            else:
                return visitor.visitChildren(self)




    def mul_num_expr(self):

        localctx = MonkeyParser.Mul_num_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_mul_num_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(MonkeyParser.T__4)
            self.state = 80
            self.number()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sum_old_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MonkeyParser.RULE_sum_old_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSum_old_expr" ):
                listener.enterSum_old_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSum_old_expr" ):
                listener.exitSum_old_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSum_old_expr" ):
                return visitor.visitSum_old_expr(self)
            else:
                return visitor.visitChildren(self)




    def sum_old_expr(self):

        localctx = MonkeyParser.Sum_old_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_sum_old_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(MonkeyParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sum_num_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(MonkeyParser.NumberContext,0)


        def getRuleIndex(self):
            return MonkeyParser.RULE_sum_num_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSum_num_expr" ):
                listener.enterSum_num_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSum_num_expr" ):
                listener.exitSum_num_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSum_num_expr" ):
                return visitor.visitSum_num_expr(self)
            else:
                return visitor.visitChildren(self)




    def sum_num_expr(self):

        localctx = MonkeyParser.Sum_num_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_sum_num_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(MonkeyParser.T__6)
            self.state = 85
            self.number()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(MonkeyParser.NumberContext,0)


        def NL(self):
            return self.getToken(MonkeyParser.NL, 0)

        def getRuleIndex(self):
            return MonkeyParser.RULE_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTest" ):
                listener.enterTest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTest" ):
                listener.exitTest(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTest" ):
                return visitor.visitTest(self)
            else:
                return visitor.visitChildren(self)




    def test(self):

        localctx = MonkeyParser.TestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_test)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(MonkeyParser.T__7)
            self.state = 88
            self.number()
            self.state = 89
            self.match(MonkeyParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IftrueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(MonkeyParser.NumberContext,0)


        def NL(self):
            return self.getToken(MonkeyParser.NL, 0)

        def getRuleIndex(self):
            return MonkeyParser.RULE_iftrue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIftrue" ):
                listener.enterIftrue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIftrue" ):
                listener.exitIftrue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIftrue" ):
                return visitor.visitIftrue(self)
            else:
                return visitor.visitChildren(self)




    def iftrue(self):

        localctx = MonkeyParser.IftrueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_iftrue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(MonkeyParser.T__8)
            self.state = 92
            self.number()
            self.state = 93
            self.match(MonkeyParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IffalseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(MonkeyParser.NumberContext,0)


        def NL(self):
            return self.getToken(MonkeyParser.NL, 0)

        def getRuleIndex(self):
            return MonkeyParser.RULE_iffalse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIffalse" ):
                listener.enterIffalse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIffalse" ):
                listener.exitIffalse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIffalse" ):
                return visitor.visitIffalse(self)
            else:
                return visitor.visitChildren(self)




    def iffalse(self):

        localctx = MonkeyParser.IffalseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_iffalse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(MonkeyParser.T__9)
            self.state = 96
            self.number()
            self.state = 97
            self.match(MonkeyParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





